# rk1

./: CMakeLists.txt  README.md
.github/workflows/: buld.yml  buld1.yml
.github/workfows/: build.yml
include/: concreteObserver.h  observer.h  subject.h  weatherData.h
src/: concreteObserver.cpp  main.cpp  weatherData.cpp
tests/: test_concreteObserver.cpp  test_observer.cpp  test_subject.cpp  test_weatherData.cpp
